fix get popular films